--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     padding: 0;
     margin: 0;
 }
+body{
+    background-color: #D8D5DB;
+}
 .navbar{
     background-color: #2D3142;
     height: 50px;
